Fix 3D button on mobile
caught by automated-tests

--- a/resources/css/3d.css
+++ b/resources/css/3d.css
@@ -34,6 +34,7 @@
 
   .js-3d-toggle.active {
     margin-left: 106px !important;
+    position: relative;
   }
 }
 
